# shared-utils

./: .gitignore  README.md  pyproject.toml
shared_utils/: __init__.py
shared_utils/browser/: __init__.py  playwright.py
shared_utils/config/: __init__.py  env.py  paths.py
shared_utils/database/: __init__.py  supabase.py
shared_utils/http/: __init__.py  client.py
shared_utils/llm/: __init__.py  client.py  response.py
shared_utils/llm/providers/: __init__.py  anthropic.py  google.py  grok.py  openai.py
shared_utils/logging/: __init__.py  formatters.py  timing.py  windows_safe.py
shared_utils/retry/: __init__.py  backoff.py  errors.py
shared_utils/schemas/: __init__.py  pydantic.py
shared_utils/testing/: __init__.py  mock_http.py  mock_llm.py
