[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_utils"
version = "0.1.0"
description = "Shared Python utilities for cross-project use"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "wpcs3"}
]
keywords = ["utilities", "logging", "llm", "windows"]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
]
supabase = [
    "supabase>=2.0.0",
]
browser = [
    "playwright>=1.40.0",
]
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "supabase>=2.0.0",
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/wpcs3/shared-utils"
Repository = "https://github.com/wpcs3/shared-utils"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared_utils*"]
